values/keel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keel-web
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: keel.opti.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keel
                port:
                  number: 9300
